tests/vrml97/good/proto-in-proto-default-value.wrl
#VRML V2.0 utf8
PROTO Node [
  field MFNode val [
    Group {
      PROTO Local [] { Group {} }
      children [ Local {} ]
    }
  ]
] {
  Group { children IS val }
}
Node {}
