tests/vrml97/bad/is-value-type-mismatch.wrl
#VRML V2.0 utf8
PROTO Node [ exposedField SFBool val TRUE ] {
  Group { children IS val }
}
